--- a/miniprogram/pages/kind_select/index.wxml
+++ b/miniprogram/pages/kind_select/index.wxml
@@ -1,6 +1,6 @@
-<head_bar title="添加点啥" showSearch="{{false}}" />
+<head_bar title="Add" showSearch="{{false}}" />
 <view class="kinds">
-  <view wx:for="{{kinds}}" class="type-item" bindtap="onKindChange" data-index="{{index}}">
+  <view wx:for="{{kinds}}" class="type-item" bindtap="onKindChange" data-type="{{item.type}}">
     <view class="iconfont {{item.icon}}"></view>
     <text class="type-item-text">{{item.text}}</text>
   </view>
