--- a/miniprogram/pages/main/index.wxss
+++ b/miniprogram/pages/main/index.wxss
@@ -19,7 +19,7 @@
 }
 .type-item {
   width: 196rpx;
-  height: 138rpx;
+  height: 145rpx;
   background-color: #fff;
   box-shadow: 4px 6px 19px rgba(141, 141, 141, 0.15);
   border-radius: 3px;
@@ -35,19 +35,39 @@
   color: #58A6FF;
 }
 .type-item-text{
-  font-size: 10px;
-  line-height: 12px;
+  font-size: 12px;
   color: #6A6F7D;
-  margin-top: 6rpx;
-}
-.type-item.active{
-  transform: scale(1.1);
-  background: #58A6FF;
-  box-shadow: 4px 4px 20px rgba(88, 166, 255, 0.7);
 }
 .type-item.active .iconfont {
   color:#fff;
 }
 .type-item.active .type-item-text{
   color: #fff;
+}
+
+.item {
+  margin: 30rpx 0;
+  padding: 0 40rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.item-img-wrapper {
+  width: 200rpx;
+  height: 200rpx;
+  padding: 14rpx;
+  background-color: #fff;
+  box-shadow: 2px 6px 15px rgba(0, 0, 0, 0.05);
+  border-radius: 3px;
+  box-sizing: border-box;
+  margin-right: 10px;
+}
+
+.item-img {
+  width: 100%;
+  height: 100%;
+}
+.title {
+  font-size: 12px;
+  color: #495566;
 }
