--- a/miniprogram/style/base.wxss
+++ b/miniprogram/style/base.wxss
@@ -26,7 +26,33 @@ button.ghost {
   border:1px solid #58A6FF;
   color:  #58A6FF;
 }
+button.danger {
+  background-color:#FF6262;
+}
 
-form button,form .input {
+form button {
   margin-top: 40px;
 }
+form .label{
+  font-size: 10px;
+  line-height: 12px;
+  color: #6A6F7D;
+  margin-left: 44rpx;
+}
+form .row{
+  margin-top: 10px;
+}
+
+.input {
+  padding: 5px 0;
+  font-size: 17px;
+  line-height: 20px;
+  color: #36455A;
+  margin:0 44rpx;
+  border-bottom: 1px solid rgba(167, 167, 167, 0.5);
+  box-sizing: border-box;
+}
+.input input {
+  width: 100%;
+}
+
